# vbsegm2step

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
tests/: test_anchor_selection.py  test_canvas_bounds.py  test_canvas_fusion.py  test_cli_model_config.py  test_config_propagation.py  test_coordinate_contract.py  test_io_directory.py  test_io_metadata.py  test_local_expansion.py  test_nifti_naming.py  test_pipeline_directory.py  test_pipeline_no_anchor.py  test_queue_validation.py  test_vertebra_bbox.py
vbsegm2step/: __init__.py  cli.py  config.py  io.py  pipeline.py  utils.py
vbsegm2step/segmentation/: __init__.py  local.py  spine.py
vbsegm2step/vertebrae/: __init__.py  canvas.py  queue.py  vertebra.py
